@@ -17,15 +17,11 @@
 
 package org.apache.solr.cli;
 
-import java.io.ByteArrayOutputStream;
-import java.io.File;
 import java.io.IOException;
-import java.io.PrintStream;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
@@ -55,7 +51,7 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
             .withUrl(zkAddr)
             .withTimeout(30000, TimeUnit.MILLISECONDS)
             .build();
-    System.setProperty("solr.solr.home", TEST_HOME());
+    System.setProperty("solr.solr.home", TEST_HOME().toString());
   }
 
   @AfterClass
@@ -83,23 +79,24 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     // Now just use a name in the configsets directory, do we find it?
     configSet = TEST_PATH().resolve("configsets");
 
-    File confDir = new File(configSet.toFile(), "cloud-subdirs");
+    Path confDir = configSet.resolve("cloud-subdirs");
     String[] args =
         new String[] {
-          "--conf-name", "upconfig2", "--conf-dir", confDir.getAbsolutePath(), "-z", zkAddr
+          "upconfig", "--conf-name", "upconfig2", "--conf-dir", confDir.toString(), "-z", zkAddr
         };
 
-    ConfigSetUploadTool tool = new ConfigSetUploadTool();
-
-    int res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
+    int res = CLITestHelper.runTool(args, ConfigSetUploadTool.class);
     assertEquals("tool should have returned 0 for success ", 0, res);
     // Now do we have that config up on ZK?
     verifyZkLocalPathsMatch(srcPathCheck, "/configs/upconfig2");
 
     // do we barf on a bogus path?
-    args = new String[] {"--conf-name", "upconfig3", "--conf-dir", "nothinghere", "-z", zkAddr};
+    args =
+        new String[] {
+          "upconfig", "--conf-name", "upconfig3", "--conf-dir", "nothinghere", "-z", zkAddr
+        };
 
-    res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
+    res = CLITestHelper.runTool(args, ConfigSetUploadTool.class);
     assertTrue("tool should have returned non-zero for failure ", 0 != res);
 
     String content =
@@ -112,8 +109,7 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
 
   @Test
   public void testDownconfig() throws Exception {
-    Path tmp =
-        Paths.get(createTempDir("downConfigNewPlace").toAbsolutePath().toString(), "myconfset");
+    Path tmp = createTempDir("downConfigNewPlace").resolve("myconfset");
 
     // First we need a configset on ZK to bring down.
 
@@ -125,40 +121,31 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
 
     String[] args =
         new String[] {
-          "--conf-name", "downconfig1", "--conf-dir", tmp.toAbsolutePath().toString(), "-z", zkAddr,
+          "downconfig", "--conf-name", "downconfig1", "--conf-dir", tmp.toString(), "-z", zkAddr,
         };
 
-    ConfigSetDownloadTool downTool = new ConfigSetDownloadTool();
-    int res = downTool.runTool(SolrCLI.processCommandLineArgs(downTool, args));
+    int res = CLITestHelper.runTool(args, ConfigSetDownloadTool.class);
     assertEquals("Download should have succeeded.", 0, res);
-    verifyZkLocalPathsMatch(
-        Paths.get(tmp.toAbsolutePath().toString(), "conf"), "/configs/downconfig1");
+    verifyZkLocalPathsMatch(tmp.resolve("conf"), "/configs/downconfig1");
 
     // Ensure that empty files don't become directories (SOLR-11198)
 
-    Path emptyFile = Paths.get(tmp.toAbsolutePath().toString(), "conf", "stopwords", "emptyfile");
+    Path emptyFile = tmp.resolve("conf").resolve("stopwords").resolve("emptyfile");
     Files.createFile(emptyFile);
 
     // Now copy it up and back and insure it's still a file in the new place
     AbstractDistribZkTestBase.copyConfigUp(tmp.getParent(), "myconfset", "downconfig2", zkAddr);
     Path tmp2 = createTempDir("downConfigNewPlace2");
-    downTool = new ConfigSetDownloadTool();
     args =
         new String[] {
-          "--conf-name",
-          "downconfig2",
-          "--conf-dir",
-          tmp2.toAbsolutePath().toString(),
-          "-z",
-          zkAddr,
+          "downconfig", "--conf-name", "downconfig2", "--conf-dir", tmp2.toString(), "-z", zkAddr,
         };
 
-    res = downTool.runTool(SolrCLI.processCommandLineArgs(downTool, args));
+    res = CLITestHelper.runTool(args, ConfigSetDownloadTool.class);
     assertEquals("Download should have succeeded.", 0, res);
-    verifyZkLocalPathsMatch(
-        Paths.get(tmp.toAbsolutePath().toString(), "conf"), "/configs/downconfig2");
+    verifyZkLocalPathsMatch(tmp.resolve("conf"), "/configs/downconfig2");
     // And insure the empty file is a text file
-    Path destEmpty = Paths.get(tmp2.toAbsolutePath().toString(), "conf", "stopwords", "emptyfile");
+    Path destEmpty = tmp2.resolve("conf").resolve("stopwords").resolve("emptyfile");
     assertTrue("Empty files should NOT be copied down as directories", destEmpty.toFile().isFile());
   }
 
@@ -172,61 +159,51 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     AbstractDistribZkTestBase.copyConfigUp(configSet, "cloud-subdirs", "cp1", zkAddr);
 
     // Now copy it somewhere else on ZK.
-    String[] args = new String[] {"--recursive", "--zk-host", zkAddr, "zk:/configs/cp1", "zk:/cp2"};
+    String[] args =
+        new String[] {"cp", "--recursive", "--zk-host", zkAddr, "zk:/configs/cp1", "zk:/cp2"};
 
-    ZkCpTool cpTool = new ZkCpTool();
-
-    int res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    int res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy from zk -> zk should have succeeded.", 0, res);
     verifyZnodesMatch("/configs/cp1", "/cp2");
 
     // try with zk->local
     Path tmp = createTempDir("tmpNewPlace2");
     args =
-        new String[] {
-          "--recursive", "--zk-host", zkAddr, "zk:/configs/cp1", "file:" + tmp.toAbsolutePath()
-        };
+        new String[] {"cp", "--recursive", "--zk-host", zkAddr, "zk:/configs/cp1", "file:" + tmp};
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
     verifyZkLocalPathsMatch(tmp, "/configs/cp1");
 
     // try with zk->local  no file: prefix
     tmp = createTempDir("tmpNewPlace3");
     args =
-        new String[] {
-          "--recursive", "--zk-host", zkAddr, "zk:/configs/cp1", tmp.toAbsolutePath().toString()
-        };
+        new String[] {"cp", "--recursive", "--zk-host", zkAddr, "zk:/configs/cp1", tmp.toString()};
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
     verifyZkLocalPathsMatch(tmp, "/configs/cp1");
 
     // try with local->zk
     args =
-        new String[] {
-          "--recursive", "--zk-host", zkAddr, srcPathCheck.toAbsolutePath().toString(), "zk:/cp3"
-        };
+        new String[] {"cp", "--recursive", "--zk-host", zkAddr, srcPathCheck.toString(), "zk:/cp3"};
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
     verifyZkLocalPathsMatch(srcPathCheck, "/cp3");
 
     // try with local->zk, file: specified
     args =
-        new String[] {
-          "--recursive", "--zk-host", zkAddr, "file:" + srcPathCheck.toAbsolutePath(), "zk:/cp4"
-        };
+        new String[] {"cp", "--recursive", "--zk-host", zkAddr, "file:" + srcPathCheck, "zk:/cp4"};
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
     verifyZkLocalPathsMatch(srcPathCheck, "/cp4");
 
     // try with recursive not specified, and therefore not happening
-    args =
-        new String[] {"--zk-host", zkAddr, "file:" + srcPathCheck.toAbsolutePath(), "zk:/cp5Fail"};
+    args = new String[] {"cp", "--zk-host", zkAddr, "file:" + srcPathCheck, "zk:/cp5Fail"};
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertTrue("Copy should NOT have succeeded, recursive not specified.", 0 != res);
 
     // NOTE: really can't test copying to '.' because the test framework doesn't allow altering the
@@ -234,26 +211,34 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
 
     // copy to local ending in separator
     // src and cp3 and cp4 are valid
-    String localSlash = tmp.normalize() + File.separator + "cpToLocal" + File.separator;
-    args = new String[] {"--zk-host", zkAddr, "zk:/cp3/schema.xml", localSlash};
+    String localSlash = tmp.normalize().resolve("cpToLocal").toString();
+    args =
+        new String[] {
+          "cp",
+          "--zk-host",
+          zkAddr,
+          "zk:/cp3/schema.xml",
+          localSlash + tmp.getFileSystem().getSeparator()
+        };
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should nave created intermediate directory locally.", 0, res);
     assertTrue(
         "File should have been copied to a directory successfully",
-        Files.exists(Paths.get(localSlash, "schema.xml")));
+        Files.exists(Path.of(localSlash, "schema.xml")));
 
     // copy to ZK ending in '/'.
     // src and cp3 are valid
     args =
         new String[] {
+          "cp",
           "--zk-host",
           zkAddr,
-          "file:" + srcPathCheck.normalize().toAbsolutePath() + File.separator + "solrconfig.xml",
+          "file:" + srcPathCheck.normalize().resolve("solrconfig.xml"),
           "zk:/powerup/"
         };
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy up to intermediate file should have succeeded.", 0, res);
     assertTrue(
         "Should have created an intermediate node on ZK",
@@ -263,13 +248,14 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     // src and cp3 are valid
     args =
         new String[] {
+          "cp",
           "--zk-host",
           zkAddr,
-          "file:" + srcPathCheck.normalize().toAbsolutePath() + File.separator + "solrconfig.xml",
+          "file:" + srcPathCheck.normalize().resolve("solrconfig.xml"),
           "zk:/copyUpFile.xml"
         };
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy up to named file should have succeeded.", 0, res);
     assertTrue(
         "Should NOT have created an intermediate node on ZK",
@@ -278,13 +264,12 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     // copy individual file down
     // src and cp3 are valid
 
-    String localNamed =
-        tmp.normalize() + File.separator + "localnamed" + File.separator + "renamed.txt";
-    args = new String[] {"--zk-host", zkAddr, "zk:/cp4/solrconfig.xml", "file:" + localNamed};
+    String localNamed = tmp.normalize().resolve("localnamed").resolve("renamed.txt").toString();
+    args = new String[] {"cp", "--zk-host", zkAddr, "zk:/cp4/solrconfig.xml", "file:" + localNamed};
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy to local named file should have succeeded.", 0, res);
-    Path locPath = Paths.get(localNamed);
+    Path locPath = Path.of(localNamed);
     assertTrue("Should have found file: " + localNamed, Files.exists(locPath));
     assertTrue("Should be an individual file", Files.isRegularFile(locPath));
     assertTrue("File should have some data", Files.size(locPath) > 100);
@@ -298,9 +283,9 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     assertTrue("Should have found Apache Software Foundation in the file! ", foundApache);
 
     // Test copy from somwehere in ZK to the root of ZK.
-    args = new String[] {"--zk-host", zkAddr, "zk:/cp4/solrconfig.xml", "zk:/"};
+    args = new String[] {"cp", "--zk-host", zkAddr, "zk:/cp4/solrconfig.xml", "zk:/"};
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy from somewhere in ZK to ZK root should have succeeded.", 0, res);
     assertTrue(
         "Should have found znode /solrconfig.xml: ", zkClient.exists("/solrconfig.xml", true));
@@ -308,27 +293,22 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     // Check that the form path/ works for copying files up. Should append the last bit of the
     // source path to the dst
     args =
-        new String[] {
-          "--recursive", "--zk-host", zkAddr, "file:" + srcPathCheck.toAbsolutePath(), "zk:/cp7/"
-        };
+        new String[] {"cp", "--recursive", "--zk-host", zkAddr, "file:" + srcPathCheck, "zk:/cp7/"};
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
     verifyZkLocalPathsMatch(srcPathCheck, "/cp7/" + srcPathCheck.getFileName().toString());
 
     // Check for an intermediate ZNODE having content. You know cp7/stopwords is a parent node.
     tmp = createTempDir("dirdata");
-    Path file = Paths.get(tmp.toAbsolutePath().toString(), "zknode.data");
+    Path file = tmp.resolve("zknode.data");
     List<String> lines = new ArrayList<>();
     lines.add("{Some Arbitrary Data}");
     Files.write(file, lines, StandardCharsets.UTF_8);
     // First, just copy the data up the cp7 since it's a directory.
-    args =
-        new String[] {
-          "--zk-host", zkAddr, "file:" + file.toAbsolutePath(), "zk:/cp7/conf/stopwords/"
-        };
+    args = new String[] {"cp", "--zk-host", zkAddr, "file:" + file, "zk:/cp7/conf/stopwords/"};
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
 
     String content =
@@ -336,28 +316,22 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
             zkClient.getData("/cp7/conf/stopwords", null, null, true), StandardCharsets.UTF_8);
     assertTrue("There should be content in the node! ", content.contains("{Some Arbitrary Data}"));
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
 
     tmp = createTempDir("cp8");
-    args =
-        new String[] {
-          "--recursive", "--zk-host", zkAddr, "zk:/cp7", "file:" + tmp.toAbsolutePath()
-        };
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    args = new String[] {"cp", "--recursive", "--zk-host", zkAddr, "zk:/cp7", "file:" + tmp};
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
 
     // Next, copy cp7 down and verify that zknode.data exists for cp7
-    Path zData = Paths.get(tmp.toAbsolutePath().toString(), "conf/stopwords/zknode.data");
+    Path zData = tmp.resolve("conf/stopwords/zknode.data");
     assertTrue("znode.data should have been copied down", zData.toFile().exists());
 
     // Finally, copy up to cp8 and verify that the data is up there.
-    args =
-        new String[] {
-          "--recursive", "--zk-host", zkAddr, "file:" + tmp.toAbsolutePath(), "zk:/cp9"
-        };
+    args = new String[] {"cp", "--recursive", "--zk-host", zkAddr, "file:" + tmp, "zk:/cp9"};
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
 
     content =
@@ -366,38 +340,34 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     assertTrue("There should be content in the node! ", content.contains("{Some Arbitrary Data}"));
 
     // Copy an individual empty file up and back down and insure it's still a file
-    Path emptyFile = Paths.get(tmp.toAbsolutePath().toString(), "conf", "stopwords", "emptyfile");
+    Path emptyFile = tmp.resolve("conf/stopwords/emptyfile");
     Files.createFile(emptyFile);
 
     args =
         new String[] {
-          "--zk-host",
-          zkAddr,
-          "file:" + emptyFile.toAbsolutePath(),
-          "zk:/cp7/conf/stopwords/emptyfile"
+          "cp", "--zk-host", zkAddr, "file:" + emptyFile, "zk:/cp7/conf/stopwords/emptyfile"
         };
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
 
     Path tmp2 = createTempDir("cp9");
-    Path emptyDest = Paths.get(tmp2.toAbsolutePath().toString(), "emptyfile");
+    Path emptyDest = tmp2.resolve("emptyfile");
     args =
         new String[] {
-          "--zk-host",
-          zkAddr,
-          "zk:/cp7/conf/stopwords/emptyfile",
-          "file:" + emptyDest.toAbsolutePath()
+          "cp", "--zk-host", zkAddr, "zk:/cp7/conf/stopwords/emptyfile", "file:" + emptyDest
         };
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
 
-    assertTrue("Empty files should NOT be copied down as directories", emptyDest.toFile().isFile());
+    assertTrue(
+        "Empty files should NOT be copied down as directories", Files.isRegularFile(emptyDest));
 
     // Now with recursive copy
 
     args =
         new String[] {
+          "cp",
           "--recursive",
           "--zk-host",
           zkAddr,
@@ -405,19 +375,16 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
           "zk:/cp10"
         };
 
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
 
     // Now copy it all back and make sure empty file is still a file when recursively copying.
     tmp2 = createTempDir("cp10");
-    args =
-        new String[] {
-          "--recursive", "--zk-host", zkAddr, "zk:/cp10", "file:" + tmp2.toAbsolutePath()
-        };
-    res = cpTool.runTool(SolrCLI.processCommandLineArgs(cpTool, args));
+    args = new String[] {"cp", "--recursive", "--zk-host", zkAddr, "zk:/cp10", "file:" + tmp2};
+    res = CLITestHelper.runTool(args, ZkCpTool.class);
     assertEquals("Copy should have succeeded.", 0, res);
 
-    Path locEmpty = Paths.get(tmp2.toAbsolutePath().toString(), "stopwords", "emptyfile");
+    Path locEmpty = tmp2.resolve("stopwords/emptyfile");
     assertTrue("Empty files should NOT be copied down as directories", locEmpty.toFile().isFile());
   }
 
@@ -432,11 +399,9 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     AbstractDistribZkTestBase.copyConfigUp(configSet, "cloud-subdirs", "mv1", zkAddr);
 
     // Now move it somewhere else.
-    String[] args = new String[] {"--zk-host", zkAddr, "zk:/configs/mv1", "zk:/mv2"};
+    String[] args = new String[] {"mv", "--zk-host", zkAddr, "zk:/configs/mv1", "zk:/mv2"};
 
-    ZkMvTool mvTool = new ZkMvTool();
-
-    int res = mvTool.runTool(SolrCLI.processCommandLineArgs(mvTool, args));
+    int res = CLITestHelper.runTool(args, ZkMvTool.class);
     assertEquals("Move should have succeeded.", 0, res);
 
     // Now does the moved directory match the original on disk?
@@ -446,16 +411,23 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
 
     // Files are in mv2
     // Now fail if we specify "file:". Everything should still be in /mv2
-    args = new String[] {"--zk-host", zkAddr, "file:" + File.separator + "mv2", "/mv3"};
+    args =
+        new String[] {
+          "mv",
+          "--zk-host",
+          zkAddr,
+          "file:" + srcPathCheck.getFileSystem().getSeparator() + "mv2",
+          "/mv3"
+        };
 
     // Still in mv2
-    res = mvTool.runTool(SolrCLI.processCommandLineArgs(mvTool, args));
+    res = CLITestHelper.runTool(args, ZkMvTool.class);
     assertTrue("Move should NOT have succeeded with file: specified.", 0 != res);
 
     // Let's move it to yet another place with no zk: prefix.
-    args = new String[] {"--zk-host", zkAddr, "/mv2", "/mv4"};
+    args = new String[] {"mv", "--zk-host", zkAddr, "/mv2", "/mv4"};
 
-    res = mvTool.runTool(SolrCLI.processCommandLineArgs(mvTool, args));
+    res = CLITestHelper.runTool(args, ZkMvTool.class);
     assertEquals("Move should have succeeded.", 0, res);
 
     assertFalse("Znode /mv3 really should be gone", zkClient.exists("/mv3", true));
@@ -463,9 +435,9 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     // Now does the moved directory match the original on disk?
     verifyZkLocalPathsMatch(srcPathCheck, "/mv4");
 
-    args = new String[] {"-z", zkAddr, "/mv4/solrconfig.xml", "/testmvsingle/solrconfig.xml"};
+    args = new String[] {"mv", "-z", zkAddr, "/mv4/solrconfig.xml", "/testmvsingle/solrconfig.xml"};
 
-    res = mvTool.runTool(SolrCLI.processCommandLineArgs(mvTool, args));
+    res = CLITestHelper.runTool(args, ZkMvTool.class);
     assertEquals("Move should have succeeded.", 0, res);
     assertTrue(
         "Should be able to move a single file",
@@ -474,9 +446,9 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     zkClient.makePath("/parentNode", true);
 
     // what happens if the destination ends with a slash?
-    args = new String[] {"--zk-host", zkAddr, "/mv4/schema.xml", "/parentnode/"};
+    args = new String[] {"mv", "--zk-host", zkAddr, "/mv4/schema.xml", "/parentnode/"};
 
-    res = mvTool.runTool(SolrCLI.processCommandLineArgs(mvTool, args));
+    res = CLITestHelper.runTool(args, ZkMvTool.class);
     assertEquals("Move should have succeeded.", 0, res);
     assertTrue(
         "Should be able to move a single file to a parent znode",
@@ -496,63 +468,66 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     AbstractDistribZkTestBase.copyConfigUp(configSet, "cloud-subdirs", "lister", zkAddr);
 
     // Should only find a single level.
-    String[] args = new String[] {"--zk-host", zkAddr, "/configs"};
+    String[] args = new String[] {"ls", "--zk-host", zkAddr, "/configs"};
 
-    ByteArrayOutputStream baos = new ByteArrayOutputStream();
-    PrintStream ps = new PrintStream(baos, false, StandardCharsets.UTF_8.name());
-    ZkLsTool tool = new ZkLsTool(ps);
+    CLITestHelper.TestingRuntime runtime = new CLITestHelper.TestingRuntime(true);
 
-    int res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
-    String content = baos.toString(StandardCharsets.UTF_8);
+    int res = CLITestHelper.runTool(args, runtime, ZkLsTool.class);
+    String content = runtime.getOutput();
 
-    assertEquals("List should have succeeded", res, 0);
+    assertEquals("List should have succeeded", 0, res);
     assertTrue("Return should contain the conf directory", content.contains("lister"));
     assertFalse("Return should NOT contain a child node", content.contains("solrconfig.xml"));
 
     // simple ls with no recursion
-    args = new String[] {"--zk-host", zkAddr, "/configs"};
+    args = new String[] {"ls", "--zk-host", zkAddr, "/configs"};
 
-    res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
-    content = baos.toString(StandardCharsets.UTF_8);
+    runtime.clearOutput();
+    res = CLITestHelper.runTool(args, runtime, ZkLsTool.class);
+    content = runtime.getOutput();
 
-    assertEquals("List should have succeeded", res, 0);
+    assertEquals("List should have succeeded", 0, res);
     assertTrue("Return should contain the conf directory", content.contains("lister"));
     assertFalse("Return should NOT contain a child node", content.contains("solrconfig.xml"));
 
     // ls with recursion
-    args = new String[] {"--recursive", "--zk-host", zkAddr, "/configs"};
+    args = new String[] {"ls", "--recursive", "--zk-host", zkAddr, "/configs"};
 
-    res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
-    content = baos.toString(StandardCharsets.UTF_8);
+    runtime.clearOutput();
+    res = CLITestHelper.runTool(args, runtime, ZkLsTool.class);
+    content = runtime.getOutput();
 
-    assertEquals("List should have succeeded", res, 0);
+    assertEquals("List should have succeeded", 0, res);
     assertTrue("Return should contain the conf directory", content.contains("lister"));
     assertTrue("Return should contain a child node", content.contains("solrconfig.xml"));
 
     // Saw a case where going from root didn't work, so test it.
-    args = new String[] {"--recursive", "--zk-host", zkAddr, "/"};
+    args = new String[] {"ls", "--recursive", "--zk-host", zkAddr, "/"};
 
-    res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
-    content = baos.toString(StandardCharsets.UTF_8);
+    runtime.clearOutput();
+    res = CLITestHelper.runTool(args, runtime, ZkLsTool.class);
+    content = runtime.getOutput();
 
-    assertEquals("List should have succeeded", res, 0);
+    assertEquals("List should have succeeded", 0, res);
     assertTrue("Return should contain the conf directory", content.contains("lister"));
     assertTrue("Return should contain a child node", content.contains("solrconfig.xml"));
 
-    args = new String[] {"--zk-host", zkAddr, "/"};
+    args = new String[] {"ls", "--zk-host", zkAddr, "/"};
 
-    res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
-    content = baos.toString(StandardCharsets.UTF_8);
-    assertEquals("List should have succeeded", res, 0);
+    runtime.clearOutput();
+    res = CLITestHelper.runTool(args, runtime, ZkLsTool.class);
+    content = runtime.getOutput();
+    assertEquals("List should have succeeded", 0, res);
     assertFalse("Return should not contain /zookeeper", content.contains("/zookeeper"));
 
     // Saw a case where ending in slash didn't work, so test it.
-    args = new String[] {"--recursive", "--zk-host", zkAddr, "/configs/"};
+    args = new String[] {"ls", "--recursive", "--zk-host", zkAddr, "/configs/"};
 
-    res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
-    content = baos.toString(StandardCharsets.UTF_8);
+    runtime.clearOutput();
+    res = CLITestHelper.runTool(args, runtime, ZkLsTool.class);
+    content = runtime.getOutput();
 
-    assertEquals("List should have succeeded", res, 0);
+    assertEquals("List should have succeeded", 0, res);
     assertTrue("Return should contain the conf directory", content.contains("lister"));
     assertTrue("Return should contain a child node", content.contains("solrconfig.xml"));
   }
@@ -567,11 +542,9 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     AbstractDistribZkTestBase.copyConfigUp(configSet, "cloud-subdirs", "rm2", zkAddr);
 
     // Should fail if recursive not set.
-    String[] args = new String[] {"--zk-host", zkAddr, "/configs/rm1"};
+    String[] args = new String[] {"rm", "--zk-host", zkAddr, "/configs/rm1"};
 
-    ZkRmTool tool = new ZkRmTool();
-
-    int res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
+    int res = CLITestHelper.runTool(args, ZkRmTool.class);
 
     assertTrue(
         "Should have failed to remove node with children unless --recursive is set", res != 0);
@@ -580,33 +553,33 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
     verifyZkLocalPathsMatch(srcPathCheck, "/configs/rm1");
 
     // run without recursive specified
-    args = new String[] {"--zk-host", zkAddr, "zk:/configs/rm1"};
+    args = new String[] {"rm", "--zk-host", zkAddr, "zk:/configs/rm1"};
 
-    res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
+    res = CLITestHelper.runTool(args, ZkRmTool.class);
 
     assertTrue(
         "Should have failed to remove node with children if --recursive is set to false", res != 0);
 
-    args = new String[] {"--recursive", "--zk-host", zkAddr, "/configs/rm1"};
+    args = new String[] {"rm", "--recursive", "--zk-host", zkAddr, "/configs/rm1"};
 
-    res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
-    assertEquals("Should have removed node /configs/rm1", res, 0);
+    res = CLITestHelper.runTool(args, ZkRmTool.class);
+    assertEquals("Should have removed node /configs/rm1", 0, res);
     assertFalse(
         "Znode /configs/toremove really should be gone", zkClient.exists("/configs/rm1", true));
 
     // Check that zk prefix also works.
-    args = new String[] {"--recursive", "--zk-host", zkAddr, "zk:/configs/rm2"};
+    args = new String[] {"rm", "--recursive", "--zk-host", zkAddr, "zk:/configs/rm2"};
 
-    res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
-    assertEquals("Should have removed node /configs/rm2", res, 0);
+    res = CLITestHelper.runTool(args, ZkRmTool.class);
+    assertEquals("Should have removed node /configs/rm2", 0, res);
     assertFalse(
         "Znode /configs/toremove2 really should be gone", zkClient.exists("/configs/rm2", true));
 
     // This should silently just refuse to do anything to the / or /zookeeper
-    args = new String[] {"--recursive", "--zk-host", zkAddr, "zk:/"};
+    args = new String[] {"rm", "--recursive", "--zk-host", zkAddr, "zk:/"};
 
     AbstractDistribZkTestBase.copyConfigUp(configSet, "cloud-subdirs", "rm3", zkAddr);
-    res = tool.runTool(SolrCLI.processCommandLineArgs(tool, args));
+    res = CLITestHelper.runTool(args, ZkRmTool.class);
     assertNotEquals("Should fail when trying to remove /.", 0, res);
   }
 
@@ -632,9 +605,9 @@ public class SolrCLIZkToolsTest extends SolrCloudTestCase {
       }
       if (isEphemeral(zkRoot + child)) continue;
 
-      Path thisPath = Paths.get(fileRoot.toAbsolutePath().toString(), child);
+      Path thisPath = fileRoot.resolve(child);
       assertTrue(
-          "Znode " + child + " should have been found on disk at " + fileRoot.toAbsolutePath(),
+          "Znode " + child + " should have been found on disk at " + fileRoot,
           Files.exists(thisPath));
       verifyAllZNodesAreFiles(thisPath, zkRoot + child);
     }
